[package]
name = "gantry_position_estimator"
version = "0.1.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
cgmath = "0.18"
r2r = "0.5.3"
futures = "0.3.5"
bytes = "0.5.4"
hex = "0.4.2"
lazy_static = "1.4.0"
snailquote = "0.3.0"

# speed up compilation
[profile.release]
opt-level = 0 # defaults to 3.
